@@ -856,7 +856,7 @@ BEGIN
     EDITTEXT        IDC_FIRSTURL,6,22,242,14,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     LTEXT           "and",IDC_DIFFSTATIC2,7,34,83,8
     EDITTEXT        IDC_SECONDURL,7,47,241,14,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    CONTROL         "",IDC_FILELIST,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,66,241,145
+    CONTROL         "",IDC_FILELIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,66,241,145
 END
 
 IDD_CREATEPATCH DIALOGEX 0, 0, 266, 204
